# llama-box

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/actions/maximize-docker-build-space/: README.md  action.yml
.github/workflows/: ci.yml  clean.yml  sync.yml
llama-box/: .clang-format  CMakeLists.txt  engine.cpp  engine_param.hpp  httpserver.hpp  main.cpp  param.hpp  ratelimiter.hpp  rpcserver.hpp  server.cpp  stablediffusion.hpp  utils.hpp  version.cpp.in  z_multimodal.hpp  z_stablediffusion.hpp  z_utils.hpp  z_vision.hpp
llama-box-v2/: CMakeLists.txt  engine.cpp  engine.h  httpserver.hpp  param.hpp  rpcserver.hpp  stablediffusion.hpp  utils.hpp
llama-box/patches/: buffer.patch  cann.patch  clean.sh  clip.patch  embedding.patch  ggml.patch  model.patch  model_py.patch  musa.patch  ngram_cache.patch  pull.sh  qwen2.patch  rpc-server.patch  rpc_server.patch  sync.sh  template.patch  tokenizer.patch
llama-box/patches/ggml/: ggml-cpu.patch
llama-box/patches/llama.cpp/: batch.patch  cann.patch  clip-minicpm_o.patch  clip.patch  common.patch  context.patch  dynamic_link.patch  embedding.patch  flash_attn.patch  ggml-cann.patch  ggml-cpu.patch  ggml-cuda.patch  ggml-hip.patch  ggml-metal.patch  ggml-rpc.patch  ggml.patch  grammer.patch  httplib.patch  log.patch  max_devices.patch  model.patch  model_py.patch  mrope.patch  ngram_cache.patch  progress_callback.patch  pure_cpu.patch  qwen2vl-kvcache-shift.patch  rpc.patch  sampling.patch  seed.patch  template.patch  token.patch  tokenizer.patch  tool_calling.patch  unlimit_ctx.patch  vendor_httplib.patch  vocab.patch
llama-box/patches/stable-diffusion.cpp/: dynamic_link.patch  ggml.patch  gguf.patch  log.patch  progress_callback.patch  util.patch
llama-box/scripts/: build-patch.cmake  build-windows-arm64.cmake  build-windows-neon.cmake  build-windows-oneapi.bat  configure-patch.cmake  gen-version-cpp.cmake  patch-llama-cpp.cmake  patch-reset.cmake  patch.cmake  unpatch-llama-cpp.cmake  version.sh
llama-box/tools/: batch.sh  batch_chat.sh  chat.sh  chat_tool_current_date_time.sh  chat_tool_get_temperature.sh  chat_tool_get_weather.sh  chat_tool_square_of_number.sh  chat_tool_square_root_of_number.sh  chat_tool_where_am_i.sh  completion.sh  image_edit.sh  image_generate.sh  image_view.scpt
